force-app/main/default/objects/vlocity_cmt__DRBulkData__c/fields/vlocity_cmt__AsyncApexJobId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AsyncApexJobId__c</fullName>
    <label>Async Apex Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>