force-app/main/default/objects/vlocity_cmt__DRBulkData__c/fields/vlocity_cmt__BulkChunkId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__BulkChunkId__c</fullName>
    <externalId>true</externalId>
    <label>Bulk Chunk Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>