force-app/main/default/objects/vlocity_cmt__DRBulkData__c/fields/vlocity_cmt__BulkChunkStatus__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__BulkChunkStatus__c</fullName>
    <label>Bulk Chunk Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>