force-app/main/default/objects/vlocity_cmt__DRBulkData__c/fields/vlocity_cmt__Data__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Data__c</fullName>
    <label>Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>