force-app/main/default/objects/vlocity_cmt__DRBulkData__c/fields/vlocity_cmt__DRBundleName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__DRBundleName__c</fullName>
    <label>Data Mapper Custom Setting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>