force-app/main/default/objects/vlocity_cmt__DRBulkData__c/fields/vlocity_cmt__DRError__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__DRError__c</fullName>
    <description>Full error when processing.</description>
    <label>Data Mapper Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>