force-app/main/default/objects/vlocity_cmt__DRBulkData__c/fields/vlocity_cmt__DRProgressData__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__DRProgressData__c</fullName>
    <description>JSON of current progress processing item if using bulk processing methods</description>
    <label>Data Mapper Progress</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>