force-app/main/default/objects/vlocity_cmt__DRBulkData__c/fields/vlocity_cmt__GlobalKey__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__GlobalKey__c</fullName>
    <label>Global Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>